--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,2 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject Ltd (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject Ltd, hashobject, #{hash:object}" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description"><title>HashObject: we love development</title><link href="/css/app.css" rel="stylesheet" type="text/css"></head><body>Our site will be here soon...</body></html>
+<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject, hashobject, #{hash:object}, HashObject Team, HashObject Ltd" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description"><title>HashObject: we love development</title><link href="/css/app.css" rel="stylesheet" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41533076-1', 'hashobject.com');
+  ga('send', 'pageview');</script></head><body>Our site will be here soon...</body></html>
