--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject, hashobject, #{hash:object}, HashObject Team, HashObject Ltd" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description"><title>HashObject: we love development</title><link href="/css/app.css" rel="stylesheet" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject, hashobject, #{hash:object}, HashObject Team, HashObject Ltd" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description"><title>HashObject: we love development</title><link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'><link href="css/app.css" rel="stylesheet" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-41533076-1', 'hashobject.com');
-  ga('send', 'pageview');</script></head><body>Our site will be here soon...</body></html>
+  ga('send', 'pageview');</script></head>
+	<body>
+    <img class="logo" src="images/hashobject-logo-white.png">
+    <div id="landing">
+      <p>Hi there:)<br>
+      <span class="uppercase">Hashobject</span> is a team of 2 people:</p>
+      <section class="team">
+        <div id="anton">
+          <img src="images/anton.png">
+          <div class="details">
+            <strong class="uppercase">Anton Podviaznikov</strong><br>
+            Full-stack developer &amp; Founder
+          </div>
+        </div>
+        <div id="maryna">
+          <img src="images/maryna.png">
+          <div class="details">
+            <strong class="uppercase">Maryna Aleksandrova</strong><br>
+            Designer &amp; Founder
+          </div>
+        </div>
+      </section>
+      <p>We are still trying to figure out what to put on our website,<br>
+      so ... better check out our blog at <a href="http://blog.hashobject.com/">blog.hashobject.com</a><br>
+      <small>(at least Anton is posting there smth about Clojure)</small><br>
+      or start following us on <span class="uppercase">Twitter</span> or <span class="uppercase">GitHub</span></p>
+      <div class="button-group">
+        <a class="twitter big button" href="https://twitter.com/hashobject"></a>
+        <a class="github big button" href="https://github.com/hashobject"></a>
+      </div>
+    </div>
+	</body>
+</html>
