deploy initial version

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject, hashobject, #{hash:object}, HashObject Team, HashObject Ltd" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description"><title>HashObject: we love development</title><link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'><link href="css/app.css" rel="stylesheet" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject, hashobject, #{hash:object}, HashObject Team, HashObject Ltd" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description"><title>HashObject: we love development</title><link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'><link href="/css/app.css" rel="stylesheet" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -7,20 +7,20 @@
   ga('create', 'UA-41533076-1', 'hashobject.com');
   ga('send', 'pageview');</script></head>
 	<body>
-    <img class="logo" src="images/hashobject-logo-white.png">
+    <img class="logo" src="/images/hashobject-logo-white.png">
     <div id="landing">
       <p>Hi there:)<br>
       <span class="uppercase">Hashobject</span> is a team of 2 people:</p>
       <section class="team">
         <div id="anton">
-          <img src="images/anton.png">
+          <img src="/images/anton.png">
           <div class="details">
             <strong class="uppercase">Anton Podviaznikov</strong><br>
             Full-stack developer &amp; Founder
           </div>
         </div>
         <div id="maryna">
-          <img src="images/maryna.png">
+          <img src="/images/maryna.png">
           <div class="details">
             <strong class="uppercase">Maryna Aleksandrova</strong><br>
             Designer &amp; Founder
