Github button, credentials for bg-img

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -36,5 +36,6 @@
         <a class="github big button" href="https://github.com/hashobject"></a>
       </div>
     </div>
+    <div class="credentials">Background image is by <a href="http://doctype.me/" target="_blank">Aleks Dorohovich</a>, found on <a href="http://unsplash.com/" target="_blank">unsplash.com</a></div>
 	</body>
 </html>
