--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -32,7 +32,7 @@
       </section>
       <p>We are still trying to figure out what to put on our website,<br>
       so ... better check out our blog at <a href="http://blog.hashobject.com/">blog.hashobject.com</a><br>
-      <small>(at least Anton is posting there smth about Clojure)</small><br>
+        or <a href="http://os.hashobject.com/">open source corner</a> with Clojure libraries.<br>
       or start following us on <span class="uppercase">Twitter</span> or <span class="uppercase">GitHub</span></p>
       <div class="button-group">
         <a class="twitter big button" href="https://twitter.com/hashobject"></a>
