--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"><meta content="HashObject (team@hashobject.com)" itemprop="author" name="author"><meta content="HashObject, hashobject, #{hash:object}, HashObject Team, HashObject Ltd" itemprop="keywords" name="keywords"><meta content="HashObject - software engineering, design and application development" itemprop="description" name="description">
+<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
+  <meta content="Hashobject (team@hashobject.com)" itemprop="author" name="author">
+  <meta content="hashobject, hashobject team, hashobject ltd" itemprop="keywords" name="keywords">
+  <meta content="Hashobject - software engineering, design and application development" itemprop="description" name="description">
   <title>HashObject: we love development</title>
   <link href="/favicon.ico" rel="shortcut icon">
   <link rel="author" href="humans.txt" >
@@ -14,20 +17,20 @@
     <img class="logo" src="/images/hashobject-logo-white.png">
     <div id="landing">
       <p>Hi there:)<br>
-      <span class="uppercase">Hashobject</span> is a team of 2 people:</p>
+      <span>Hashobject</span> is a team of 2 people:</p>
       <section class="team">
         <div id="anton">
           <img src="/images/anton.png">
           <div class="details">
             <strong class="uppercase">Anton Podviaznikov</strong><br>
-            Full-stack developer &amp; Founder
+            Full-stack developer
           </div>
         </div>
         <div id="maryna">
           <img src="/images/maryna.png">
           <div class="details">
             <strong class="uppercase">Maryna Aleksandrova</strong><br>
-            Designer &amp; Founder
+            Designer
           </div>
         </div>
       </section>
