use gulp instead of grunt

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,7 +14,7 @@
   ga('create', 'UA-41533076-1', 'hashobject.com');
   ga('send', 'pageview');</script></head>
 	<body>
-    <img class="logo" src="/images/hashobject-logo-white.png">
+    <img class="logo" src="/images/hashobject-logo.png">
     <div id="landing">
       <p>Hi there:)<br>
       <span>Hashobject</span> is a team of 2 people:</p>
