--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
-  <meta content="Hashobject (team@hashobject.com)" itemprop="author" name="author">
-  <meta content="hashobject, hashobject team, hashobject ltd" itemprop="keywords" name="keywords">
-  <meta content="Hashobject - software engineering, design and application development" itemprop="description" name="description">
-  <title>HashObject: we love development</title>
-  <link href="/favicon.ico" rel="shortcut icon">
-  <link rel="author" href="humans.txt" >
-  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'><link href="/css/app.css" rel="stylesheet" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<html lang="en">
+  <head>
+      <meta charset="utf-8">
+      <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+      <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
+      <meta content="Hashobject (team@hashobject.com)" itemprop="author" name="author">
+      <meta content="hashobject, hashobject team, hashobject ltd" itemprop="keywords" name="keywords">
+      <meta content="Hashobject - software engineering, design and application development" itemprop="description" name="description">
+      <title>Hashobject: we love development</title>
+      <link href="/favicon.png" rel="icon" type="image/png">
+      <link rel="author" href="humans.txt" >
+      <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
+      <link href="/css/app.css" rel="stylesheet" type="text/css">
+      <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-41533076-1', 'hashobject.com');
-  ga('send', 'pageview');</script></head>
+  ga('send', 'pageview');</script>
+    </head>
 	<body>
-    <img class="logo" src="/images/hashobject-logo.png">
+    <img class="logo" src="/images/hashobject-logo.svg">
     <div id="landing">
       <p>Hi there:)<br>
       <span>Hashobject</span> is a team of 2 people:</p>
