--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -29,14 +29,18 @@
         <div id="anton">
           <img src="/images/anton.png">
           <div class="details">
-            <strong class="uppercase">Anton Podviaznikov</strong><br>
+            <strong class="uppercase">
+              <a href="https://twitter.com/podviaznikov">Anton Podviaznikov</a>
+            </strong><br>
             Full-stack developer
           </div>
         </div>
         <div id="maryna">
           <img src="/images/maryna.png">
           <div class="details">
-            <strong class="uppercase">Maryna Aleksandrova</strong><br>
+            <strong class="uppercase">
+              <a href="https://twitter.com/m_aleksandrova">Maryna Aleksandrova</a>
+            </strong><br>
             Designer
           </div>
         </div>
@@ -44,7 +48,8 @@
       <p>We are still trying to figure out what to put on our website,<br>
       so ... better check out our blog at <a href="http://blog.hashobject.com/">blog.hashobject.com</a><br>
         or <a href="http://os.hashobject.com/">open source corner</a> with Clojure libraries.<br>
-      or start following us on <span class="uppercase">Twitter</span> or <span class="uppercase">GitHub</span></p>
+      or start following us on <span class="uppercase">Twitter</span> or <span class="uppercase">GitHub</span>.<br>
+      If you need help with design or development send us and <a href="mailto:team@hashobject.com">email</a></p>
       <div class="button-group">
         <a class="twitter big button" href="https://twitter.com/hashobject"></a>
         <a class="github big button" href="https://github.com/hashobject"></a>
